Bug 1678680 [PipeWire] Lock current_frame_ access as it can be used from multiple threads, r=dminor

Differential Revision: https://phabricator.services.mozilla.com/D98080